[tool.poetry]
name = "csm"
version = "0.1.0"
description = ""
authors = ["nekanat <nekanat.stock@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Rtree = "^0.9.7"
torch = "^1.7.1"
fvcore = "^0.1.3"
matplotlib = "^3.3.4"
trimesh = "^3.9.8"
imageio = "^2.9.0"
tensorboard = "^2.4.1"
torchvision = "^0.8.2"
scikit-image = "^0.18.1"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
